implemented the book functionality and just finalized on the book card now moving to the ratings
